--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -52,17 +52,19 @@ jobs:
       run: ./ci/upload_cov.sh "OS Comp [${{ matrix.cfg.name }}]"
     
   armv64_job:
-      name: Build and Test for arm64
-      runs-on: ubuntu-20.04
+      name: Build and Test for arm64  
+      runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v2
-        - name: Set up QEMU
-          id: qemu
-          uses: docker/setup-qemu-action@v1
-        - name: Install and Run tests
-          run: |
+      - uses: actions/checkout@v1
+      - name: Set up QEMU
+        id: qemu
+      - uses: docker/setup-qemu-action@v1
+        with:
+          python-version: '3.8'
+      - name: Install and Run tests
+        run: |
             docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-              arm64v8/ubuntu:20.04 \
+              arm64v8/ubuntu-latest\
               bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl && \
               python3 -m pip install virtualenv && python3 -m venv py38-venv && \
               source py38-venv/bin/activate && \
