--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -25,6 +25,7 @@ on:
       - ".github/workflows/images.yml"
       - ".github/workflows/os_comp.yml"
       - "run_unittests.py"
+
 jobs:
   arch:
     name: ${{ matrix.cfg.name }}
@@ -45,12 +46,10 @@ jobs:
       # All environment variables are stored inside the docker image in /ci/env_vars.sh
       # They are defined in the `env` section in each image.json. CI_ARGS should be set
       # via the `args` array ub the image.json
-      run: |
-        uname -m
-        bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py ./run_tests.py $CI_ARGS'
+      run: bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py ./run_tests.py $CI_ARGS'
     - name: Upload coverage report
       run: ./ci/upload_cov.sh "OS Comp [${{ matrix.cfg.name }}]"
-    
+        
   armv64_job:
       name: Build and Test for arm64  
       runs-on: ubuntu-latest
