--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -62,12 +62,12 @@ jobs:
           python-version: '3.8'
       - name: Install and Run tests
         run: |
-            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
-              arm64v8/ubuntu-latest\
-              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl && \
-              python3 -m pip install virtualenv && python3 -m venv py38-venv && \
-              source py38-venv/bin/activate && \
-              python3 -m pip install meson && \
-              python3 -m pip install ninja && \
-              ./run_tests.py && \
+            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws 
+              arm64v8/ubuntu-latest
+              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl 
+              python3 -m pip install virtualenv && python3 -m venv py38-venv 
+              source py38-venv/bin/activate 
+              python3 -m pip install meson 
+              python3 -m pip install ninja
+              ./run_tests.py
               
