--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,10 @@ jobs:
           name: Install dependencies
           command: |
              sudo apt-get update && sudo apt-get -y install python3 python3-pip 
+             sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
              python3 -m pip install meson 
              python3 -m pip install ninja
+             pip3 install jsonschema
              ./run_tests.py
 workflows:
   version: 2.1
