--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
              sudo apt-get update && sudo apt-get -y install python3 python3-pip 
              sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
              python3 -m pip install meson 
+             python3 --version
              python3 -m pip install ninja
              pip3 install jsonschema
              sudo apt-get install --reinstall pkg-config cmake-data
