--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,8 @@ jobs:
           command: |
              sudo apt-get update && sudo apt-get -y install python3 python3-pip 
              sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
+             python3 --version
+             python3 -m pip install --upgrade pip
              python3 -m pip install meson 
              python3 --version
              python3 -m pip install ninja
