--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,13 +20,13 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-             sudo apt-get update && sudo apt-get -y install python3 python3-pip 
+             sudo apt-get update && sudo apt-get -y install python3 python3.8 python3-pip 
              sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
-             python3 --version
-             python3 -m pip install --upgrade pip
-             python3 -m pip install meson 
-             python3 --version
-             python3 -m pip install ninja
+             python3.8 --version
+             python3.8 -m pip install --upgrade pip
+             python3.8 -m pip install meson 
+             python3.8 --version
+             python3.8 -m pip install ninja
              pip3 install jsonschema
              sudo apt-get install --reinstall pkg-config cmake-data
              ./run_tests.py
