--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,40 +2,40 @@ version: 2.1
 
 orbs:
   python: circleci/python@1.5.0
-
+executors:
+  # Your dependencies would go in the docker images that represent
+  # the Linux distributions you are supporting
+  meson_ubuntu_builder:
+    docker:
+      - image: your_dockerhub_username/ubuntu-sys
+    machine:
+      image: ubuntu-2004:202101-01
+    resource_class: arm.medium
 jobs:
   manylinux2014-aarch64:
     parameters:
       cibw_build:
         type: string
         default: "cp37-*"
-
+        
     machine:
       image: ubuntu-2004:202101-01
-    resource_class: arm.medium
+    resource_class: arm.medium        
+  meson_ubuntu_build:
+    executor: meson_ubuntu_builder
     steps:
       - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
-      - run:
-          name: Install dependencies
-          command: |
-             sudo apt-get update && sudo apt-get -y install python3 python3-pip 
-             sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
-             python3 --version
-             python3 -m pip install --upgrade pip
-             python3 -m pip install meson 
-             python3 --version
-             python3 -m pip install ninja
-             pip3 install jsonschema
-             sudo apt-get install --reinstall pkg-config cmake-data
-             ./run_tests.py
+      - run: meson setup builddir --backend ninja
+      - run: meson compile -C builddir
+      - run: meson test -C builddir
+      - ./run_tests.py
 workflows:
   version: 2.1
-  main:
+  linux_workflow:
     jobs:
       - manylinux2014-aarch64:
           matrix:
             parameters:
               cibw_build:
-                - "cp37*"
+                - "cp37*"    
+      - meson_ubuntu_build
