--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -35,7 +35,6 @@ jobs:
       matrix:
         cfg:
           - { name: Arch Linux,       id: arch     }
-          - { name: Ubuntu Bionic,    id: bionic   }
     container: mesonbuild/${{ matrix.cfg.id }}:latest
     env:
       MESON_CI_JOBNAME: linux-${{ matrix.cfg.id }}-gcc
@@ -49,3 +48,40 @@ jobs:
       run: bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py ./run_tests.py $CI_ARGS'
     - name: Upload coverage report
       run: ./ci/upload_cov.sh "OS Comp [${{ matrix.cfg.name }}]"
+  test_arm64: 
+     runs-on: ubuntu-latest
+     strategy:
+      matrix:
+        python-version: [ 3.8]
+      fail-fast: false
+     steps:
+      - uses: actions/checkout@v2
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+      - name: Install and Run tests
+        run: |
+               docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
+               arm64v8/ubuntu:20.04 \
+               bash -exc 'apt-get update && apt-get -y install python3.8 curl git && \
+                ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata && \
+                apt-get -y install software-properties-common && add-apt-repository ppa:deadsnakes/ppa && apt-get -y update && \
+                apt install -y python3.8-venv && python3.8 -m venv venv38 && source venv38/bin/activate && \
+                python3.8 -m pip install --upgrade pip && \
+                python3.8 --version && \
+                uname -m && \
+                apt-get -y install make && \
+                apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config && \
+                apt-get install libglib2.0-dev -y && \
+                apt-get install llvm-dev -y && \
+                apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y && \
+                apt-get install python-dev -y && \
+                apt-get install tachyon -y && \
+                python3.8 setup.py install && \
+                python3.8 -m pip install meson && \
+                python3.8 -m pip install pytest ninja && \
+                export MESON_UNIT_TEST_BACKEND=ninja && \
+                ./run_tests.py && \
+                deactivate'
+
+
