--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -82,5 +82,5 @@ jobs:
                 python3.8 -m pip install meson && \
                 python3.8 -m pip install pytest ninja && \
                 export MESON_UNIT_TEST_BACKEND=ninja && \
-                pytest && \
+                ./run_tests.py && \
                 deactivate'
