--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -45,7 +45,7 @@ jobs:
       # All environment variables are stored inside the docker image in /ci/env_vars.sh
       # They are defined in the `env` section in each image.json. CI_ARGS should be set
       # via the `args` array ub the image.json
-      run: bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py ./run_tests.py $CI_ARGS'
+      run: bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py pytest $CI_ARGS'
     - name: Upload coverage report
       run: ./ci/upload_cov.sh "OS Comp [${{ matrix.cfg.name }}]"
       
@@ -82,5 +82,6 @@ jobs:
                 python3.8 -m pip install meson && \
                 python3.8 -m pip install pytest ninja && \
                 export MESON_UNIT_TEST_BACKEND=ninja && \
-                ./run_tests.py && \
+                pip3 install pytest && \
+                pytest && \
                 deactivate'
