--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -45,9 +45,9 @@ jobs:
       # All environment variables are stored inside the docker image in /ci/env_vars.sh
       # They are defined in the `env` section in each image.json. CI_ARGS should be set
       # via the `args` array ub the image.json
-      run: bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py ./run_tests.py $CI_ARGS'
-           pip3 install pytest
+      run: pip3 install pytest
            pytest
+           bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py ./run_tests.py $CI_ARGS'
     - name: Upload coverage report
       run: ./ci/upload_cov.sh "OS Comp [${{ matrix.cfg.name }}]"
       
