--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -24,9 +24,40 @@ jobs:
     - name: Install Dependencies
       run: |
         apt-get update && apt-get install python3 && apt install -y python3-pip
+        python3 -m pip install --upgrade pip
         python3 setup.py install 
         export MESON_UNIT_TEST_BACKEND=ninja 
         python3 -m pip install meson 
         python3 -m pip install pytest ninja 
+        pip3 install jsonschema
         pip3 install pytest 
         pytest
+
+  test_arm64: 
+     runs-on: ubuntu-latest
+     strategy:
+      matrix:
+        python-version: [ 3.8]
+      fail-fast: false
+     steps:
+      - uses: actions/checkout@v2
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v1
+      - name: Install and Run tests
+        run: |
+               docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
+               arm64v8/ubuntu:20.04 \
+               bash -exc 'apt-get update && apt-get -y install python3.8 curl git && \
+                apt-get update && apt-get install python3 && apt install -y python3-pip
+                python3.8 -m pip install --upgrade pip && \
+                python3.8 --version && \
+                uname -m && \
+                python3.8 setup.py install && \
+                python3.8 -m pip install meson && \
+                python3.8 -m pip install pytest ninja && \
+                export MESON_UNIT_TEST_BACKEND=ninja && \
+                pip3 install jsonschema && \
+                pip3 install pytest && \
+                pytest && \
+                deactivate'
