--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         apt-get update && apt-get install python3 && apt-get install python3-pip
+        apt-get -y install autoconf automake build-essential cmake pkg-config llvm-dev
         python3 -m pip install --upgrade pip
         python3 setup.py install 
         export MESON_UNIT_TEST_BACKEND=ninja 
@@ -50,6 +51,7 @@ jobs:
                arm64v8/ubuntu:20.04 \
                bash -exc 'apt-get update && apt-get -y install python3.8 curl git && \
                 apt-get update && apt-get install -y python3 && apt-get install -y python3-pip && \
+                apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config llvm-dev && \
                 python3.8 -m pip install --upgrade pip && \
                 python3.8 --version && \
                 uname -m && \
