--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -1,38 +1,53 @@
-name: Test
+name: linux
 
-on: [push, pull_request]
+concurrency:
+  group: linux-${{ github.head_ref }}
+  cancel-in-progress: true
+
+on:
+  push:
+    branches:
+      - master
+      # Stable branches such as 0.56 or the eventual 1.0
+      - '[0-9]+.[0-9]+'
+    paths:
+      - "mesonbuild/**"
+      - "test cases/**"
+      - "unittests/**"
+      - ".github/workflows/images.yml"
+      - ".github/workflows/os_comp.yml"
+      - "run_unittests.py"
+  pull_request:
+    paths:
+      - "mesonbuild/**"
+      - "test cases/**"
+      - "unittests/**"
+      - ".github/workflows/images.yml"
+      - ".github/workflows/os_comp.yml"
+      - "run_unittests.py"
 
 jobs:
-  test:
+  arch:
+    name: ${{ matrix.cfg.name }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - 'ubuntu-20.04'
-        python-version:
-          - '3.8'
-        arch:
-          - 'x86_64'
+        cfg:
+          - { name: Arch Linux,       id: arch     }
+    container: mesonbuild/${{ matrix.cfg.id }}:latest
+    env:
+      MESON_CI_JOBNAME: linux-${{ matrix.cfg.id }}-gcc
+
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-        
-    - name: Install Dependencies
-      run: |
-        apt-get update && apt-get install python3 && apt-get install python3-pip
-        apt-get -y install autoconf automake build-essential cmake pkg-config llvm-dev
-        python3 -m pip install --upgrade pip
-        python3 setup.py install 
-        export MESON_UNIT_TEST_BACKEND=ninja 
-        python3 -m pip install meson 
-        python3 -m pip install pytest ninja 
-        pip3 install jsonschema
-        pip3 install pytest 
-        pytest
+    - name: Run tests
+      # All environment variables are stored inside the docker image in /ci/env_vars.sh
+      # They are defined in the `env` section in each image.json. CI_ARGS should be set
+      # via the `args` array ub the image.json
+      run: bash -c 'source /ci/env_vars.sh; cd $GITHUB_WORKSPACE; ./tools/run_with_cov.py ./run_tests.py $CI_ARGS'
+    - name: Upload coverage report
+      run: ./ci/upload_cov.sh "OS Comp [${{ matrix.cfg.name }}]"
 
   test_arm64: 
      runs-on: ubuntu-latest
@@ -61,5 +76,5 @@ jobs:
                 export MESON_UNIT_TEST_BACKEND=ninja && \
                 pip3 install jsonschema && \
                 pip3 install pytest && \
-                pytest && \
+                ./run_tests.py && \
                 deactivate'
