--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,13 @@ jobs:
           name: ️️🏗️ pip dev requirements
           command: |
              uname -m 
-             sudo apt-get update && sudo apt-get install -y python3.8 && sudo apt-get install -y python3-pip
+             sudo apt-get update && sudo apt-get -y install python3 python3-pip
              sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config llvm-dev
-             python3.8 -m pip install --upgrade pip
-             python3.8 --version
-             python3.8 setup.py install
-             python3.8 -m pip install meson 
-             python3.8 -m pip install pytest ninja 
+             python3 -m pip install --upgrade pip
+             python3 --version
+             python3 setup.py install
+             python3 -m pip install meson 
+             python3 -m pip install pytest ninja 
              export MESON_UNIT_TEST_BACKEND=ninja 
              pip3 install jsonschema
              pip3 install pytest
@@ -39,13 +39,13 @@ jobs:
           name: ️️🏗️ pip dev requirements
           command: |
              uname -m 
-             sudo apt-get update && sudo apt-get install -y python3.8 && sudo apt-get install -y python3-pip
+             sudo apt-get update && sudo apt-get -y install python3 python3-pip
              sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config llvm-dev
-             python3.8 -m pip install --upgrade pip
-             python3.8 --version
-             python3.8 setup.py install
-             python3.8 -m pip install meson 
-             python3.8 -m pip install pytest ninja 
+             python3 -m pip install --upgrade pip
+             python3 --version
+             python3 setup.py install
+             python3 -m pip install meson 
+             python3 -m pip install pytest ninja 
              export MESON_UNIT_TEST_BACKEND=ninja 
              pip3 install jsonschema
              pip3 install pytest
