--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -65,8 +65,9 @@ jobs:
                docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
                arm64v8/ubuntu:20.04 \
                bash -exc 'apt-get update && apt-get -y install python3.8 curl git && \
-                apt-get update && apt-get install -y python3 && apt-get install -y python3-pip && \
-                apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config llvm-dev && \
+                ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata && \
+                apt-get -y install software-properties-common && add-apt-repository ppa:deadsnakes/ppa && apt-get -y update && \
+                apt install -y python3.8-venv && python3.8 -m venv venv38 && source venv38/bin/activate && \
                 apt-get build-dep g++ && \
                 apt-get install pkg-config libgmp-dev libmpfr-dev libmpc-dev && \
                 python3.8 -m pip install --upgrade pip && \
