--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -68,15 +68,21 @@ jobs:
                 ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata && \
                 apt-get -y install software-properties-common && add-apt-repository ppa:deadsnakes/ppa && apt-get -y update && \
                 apt install -y python3.8-venv && python3.8 -m venv venv38 && source venv38/bin/activate && \
-                apt-get install pkg-config libgmp-dev libmpfr-dev libmpc-dev && \
                 python3.8 -m pip install --upgrade pip && \
                 python3.8 --version && \
                 uname -m && \
+                apt-get -y install make && \
+                apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config && \
+                 apt-get install libgmp-dev libmpfr-dev libmpc-dev && \
+                apt-get install libglib2.0-dev -y && \
+                apt-get install llvm-dev -y && \
+                apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y && \
+                apt-get install python-dev -y && \
+                apt-get install tachyon -y && \
                 python3.8 setup.py install && \
                 python3.8 -m pip install meson && \
                 python3.8 -m pip install pytest ninja && \
                 export MESON_UNIT_TEST_BACKEND=ninja && \
-                pip3 install jsonschema && \
-                pip3 install pytest && \
                 ./run_tests.py && \
                 deactivate'
+
