--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -79,6 +79,8 @@ jobs:
                 apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y && \
                 apt-get install python-dev -y && \
                 apt-get install tachyon -y && \
+                sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) --default-toolchain beta && \
+                source $HOME/.cargo/env && \
                 python3.8 setup.py install && \
                 python3.8 -m pip install meson && \
                 python3.8 -m pip install pytest ninja && \
