--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -73,12 +73,14 @@ jobs:
                 uname -m && \
                 apt-get -y install make && \
                 apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config && \
-                apt-get -y install libgmp-dev libmpfr-dev libmpc-dev && \
+                apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev && \
                 apt-get install libglib2.0-dev -y && \
                 apt-get install llvm-dev -y && \
                 apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y && \
                 apt-get install python-dev -y && \
                 apt-get install tachyon -y && \
+                apt-get install cython -y && \
+                apt-get install libatf-c++-2 -y && \
                 sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) --default-toolchain beta && \
                 source $HOME/.cargo/env && \
                 python3.8 setup.py install && \
