--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -73,7 +73,7 @@ jobs:
                 uname -m && \
                 apt-get -y install make && \
                 apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config && \
-                apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev && \
+                apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev libgtk-3-dev libgirepository1.0-dev && \
                 apt-get install libglib2.0-dev -y && \
                 apt-get install llvm-dev -y && \
                 apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y && \
