--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -73,16 +73,17 @@ jobs:
                 uname -m && \
                 apt-get -y install make && \
                 apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config && \
-                apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev libgtk-3-dev libgirepository1.0-dev && \
+                apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev libgtk-3-dev libgirepository1.0-dev gcc g++ && \
                 apt-get install libglib2.0-dev -y && \
                 apt-get install llvm-dev -y && \
                 apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y && \
-                apt-get -y install python-dev libcpputest-dev nasm gfortran valac default-jdk openjdk-8-jdk  && \
+                apt-get -y install python-dev libcpputest-dev as31 nasm gfortran valac default-jdk openjdk-8-jdk dmd-compiler dub mono-complete dotnet-sdk mono-gmcs  && \
                 apt-get install tachyon -y && \
                 apt-get install cython -y && \
                 apt-get install libatf-c++-2 -y && \
                 sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) -y --default-toolchain beta && \
                 source $HOME/.cargo/env && \
+                curl -fsS https://dlang.org/install.sh | bash -s dmd
                 python3.8 setup.py install && \
                 python3.8 -m pip install meson && \
                 python3.8 -m pip install pytest ninja && \
