--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -81,6 +81,7 @@ jobs:
                 apt-get install tachyon -y && \
                 apt-get install cython -y && \
                 apt-get install libatf-c++-2 -y && \
+                python -m pip install polyglot && \
                 sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) -y --default-toolchain beta && \
                 source $HOME/.cargo/env && \
                 python3.8 setup.py install && \
