--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -82,6 +82,8 @@ jobs:
                 apt-get install tachyon -y && \
                 apt-get install cython -y && \
                 apt-get install libatf-c++-2 -y && \
+                apt-get -y install gcc g++  dmd-compiler dub mono-complete dotnet-sdk mono-gmcs && \
+                curl -fsS https://dlang.org/install.sh | bash -s dmd
                 sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) -y --default-toolchain beta && \
                 source $HOME/.cargo/env && \
                 python3.8 setup.py install && \
