--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,24 +8,11 @@ jobs:
    
     working_directory: ~/python-lz4
     steps:
-      
-      
+
       - checkout
-      - run:
-          name: ️️🏗️ pip dev requirements
-          command: |
-             uname -m 
-             sudo apt-get update && sudo apt-get -y install python3 python3-pip
-             sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config llvm-dev
-             python3 -m pip install --upgrade pip
-             python3 --version
-             python3 setup.py install
-             python3 -m pip install meson 
-             python3 -m pip install pytest ninja 
-             export MESON_UNIT_TEST_BACKEND=ninja 
-             pip3 install jsonschema
-             pip3 install pytest
-             ./run_tests.py
+      - run: meson setup builddir --backend ninja
+      - run: meson compile -C builddir
+      - run: meson test -C builddir
              
   build-medium-arm64:
     machine:
@@ -35,21 +22,10 @@ jobs:
     steps:
       
       - checkout
-      - run:
-          name: ️️🏗️ pip dev requirements
-          command: |
-             uname -m 
-             sudo apt-get update && sudo apt-get -y install python3 python3-pip
-             sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config llvm-dev
-             python3 -m pip install --upgrade pip
-             python3 --version
-             python3 setup.py install
-             python3 -m pip install meson 
-             python3 -m pip install pytest ninja 
-             export MESON_UNIT_TEST_BACKEND=ninja 
-             pip3 install jsonschema
-             pip3 install pytest
-             ./run_tests.py
+      - run: meson setup builddir --backend ninja
+      - run: meson compile -C builddir
+      - run: meson test -C builddir
+      
 workflows:
   version: 2
   python3.8:
