--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
 
       - checkout
+      - run: sudo apt-get update && sudo apt-get -y install python3 python3-pip
+      - run: pip3 install --upgrade pip
+      - run: python3 -m pip install meson
       - run: meson setup builddir --backend ninja
       - run: meson compile -C builddir
       - run: meson test -C builddir
@@ -22,6 +25,9 @@ jobs:
     steps:
       
       - checkout
+      - run: sudo apt-get update && sudo apt-get -y install python3 python3-pip
+      - run: pip3 install --upgrade pip
+      - run: python3 -m pip install meson
       - run: meson setup builddir --backend ninja
       - run: meson compile -C builddir
       - run: meson test -C builddir
