--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,20 @@ jobs:
       image: ubuntu-2004:202101-01
    
     working_directory: ~/python-lz4
-    steps:
-
+    steps: 
       - checkout
-      - run: sudo apt-get update && sudo apt-get -y install python3 python3-pip
-      - run: pip3 install --upgrade pip
-      - run: python3 -m pip install meson
-      - run: meson setup builddir --backend ninja
-      - run: meson compile -C builddir
-      - run: meson test -C builddir
+      - run:
+          name: ️ pip dev requirements
+          command: |
+             uname -m 
+             sudo apt-get update && sudo apt-get -y install python3 python3-pip 
+             pip3 install --upgrade pip
+             python3 setup.py install 
+             python3.8 setup.py install
+             python3.8 -m pip install meson
+             python3.8 -m pip install pytest ninja
+             export MESON_UNIT_TEST_BACKEND=ninja
+             ./run_tests.py
              
   build-medium-arm64:
     machine:
@@ -25,12 +30,18 @@ jobs:
     steps:
       
       - checkout
-      - run: sudo apt-get update && sudo apt-get -y install python3 python3-pip
-      - run: pip3 install --upgrade pip
-      - run: python3 -m pip install meson
-      - run: meson setup builddir --backend ninja
-      - run: meson compile -C builddir
-      - run: meson test -C builddir
+      - run:
+          name: ️ pip dev requirements
+          command: |
+             uname -m 
+             sudo apt-get update && sudo apt-get -y install python3 python3-pip 
+             pip3 install --upgrade pip
+             python3 setup.py install 
+             python3.8 setup.py install
+             python3.8 -m pip install meson
+             python3.8 -m pip install pytest ninja
+             export MESON_UNIT_TEST_BACKEND=ninja
+             ./run_tests.py
       
 workflows:
   version: 2
