--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -87,7 +87,7 @@ jobs:
                 apt-get install cython -y && \
                 apt-get install libatf-c++-2 -y && \
                 apt-get -y install gcc g++  dmd-compiler dub mono-complete dotnet-sdk mono-gmcs && \
-                curl -fsS https://dlang.org/install.sh | bash -s dmd && \
+                curl -fsS https://dlang.org/install.sh | bash -s dmd
                 sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) -y --default-toolchain beta && \
                 source $HOME/.cargo/env && \
                 python3.8 setup.py install && \
@@ -95,4 +95,6 @@ jobs:
                 python3.8 -m pip install pytest ninja && \
                 export MESON_UNIT_TEST_BACKEND=ninja && \
                 ./run_tests.py && \
-
+                deactivate'
+        
+               
