--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -24,23 +24,23 @@ jobs:
     - name: Install Dependencies
       run: |
                 sudo apt-get update && sudo apt-get -y install python3.8 curl git
-                ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata
-                apt-get -y install software-properties-common && add-apt-repository ppa:deadsnakes/ppa && apt-get -y update
+                sudo ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime && export DEBIAN_FRONTEND=noninteractive && sudo apt-get install -y tzdata && dpkg-reconfigure --frontend noninteractive tzdata
+                sudo apt-get -y install software-properties-common && add-apt-repository ppa:deadsnakes/ppa && sudo apt-get -y update
                 python3.8 -m pip install --upgrade pip
                 python3.8 --version
                 uname -m
-                apt-get -y install make
-                apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
-                apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev libgtk-3-dev libgirepository1.0-dev
-                apt-get install libglib2.0-dev -y
-                apt-get install llvm-dev -y
-                apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y
-                apt-get -y install openssl libssl-dev libssl1.0 libgl1-mesa-dev libqt5x11extras5 qtcreator zlib1g-dev liblzma-dev libbz2-dev
-                apt-get -y install python-dev libcpputest-dev as31 nasm gfortran valac default-jdk openjdk-8-jdk mono-complete gobject-introspection gtk+-3.0 libboost-all-dev
-                apt-get install tachyon -y
-                apt-get install cython -y
-                apt-get install libatf-c++-2 -y
-                apt-get -y install gcc g++  dmd-compiler dub mono-complete dotnet-sdk mono-gmcs
+                sudo apt-get -y install make
+                sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
+                sudo apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev libgtk-3-dev libgirepository1.0-dev
+                sudo apt-get install libglib2.0-dev -y
+                sudo apt-get install llvm-dev -y
+                sudo apt-get install libpq-dev -y libxml2-dev -y libxslt1-dev -y python3-dev -y
+                sudo apt-get -y install openssl libssl-dev libssl1.0 libgl1-mesa-dev libqt5x11extras5 qtcreator zlib1g-dev liblzma-dev libbz2-dev
+                sudo apt-get -y install python-dev libcpputest-dev as31 nasm gfortran valac default-jdk openjdk-8-jdk mono-complete gobject-introspection gtk+-3.0 libboost-all-dev
+                sudo apt-get install tachyon -y
+                sudo apt-get install cython -y
+                sudo apt-get install libatf-c++-2 -y
+                sudo apt-get -y install gcc g++  dmd-compiler dub mono-complete dotnet-sdk mono-gmcs
                 curl -fsS https://dlang.org/install.sh | bash -s dmd
                 sh <(curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs) -y --default-toolchain beta
                 source $HOME/.cargo/env
