--- a/.github/workflows/os_comp.yml
+++ b/.github/workflows/os_comp.yml
@@ -29,7 +29,7 @@ jobs:
                 python3.8 -m pip install --upgrade pip
                 python3.8 --version
                 uname -m
-                sudo apt-get -y install makesudo 
+                sudo apt-get -y install make
                 sudo apt-get -y install autoconf automake build-essential cmake libtool mercurial pkg-config
                 sudo apt-get -y install libgmp-dev libmpfr-dev libmpc-dev libgtest-dev libgtk-3-dev libgirepository1.0-dev
                 sudo apt-get install libglib2.0-dev -y
